
* SOLR-17120: Fix NullPointerException in UpdateLog.applyOlderUpdates that can occur if there are multiple partial
  updates of the same document in separate requests using commitWithin. (Calvin Smith, Christine Poerschke)

* SOLR-17112: bin/solr script doesn't do ps properly on some systems. (Vincenzo D'Amore via Eric Pugh)

Dependency Upgrades
---------------------
* PR#2055: Update org.mockito:mockito* from v5.5.0 to v5.8.0 (solrbot)

* PR#2165: Update org.eclipse.jetty*:* to v10.0.19 (solrbot)

* PR#2159: Update io.netty:* to v4.1.104.Final (solrbot)

* PR#2048: Update dependency commons-cli:commons-cli to v1.6.0 (solrbot)

* PR#2174: Update org.slf4j:* to v2.0.10 (solrbot)

* PR#2135: Update dependency com.fasterxml.jackson:jackson-bom to v2.16.1 (solrbot)

* PR#2138: Update dependency org.apache.commons:commons-compress to v1.25.0 (solrbot)

* PR#2139: Update dependency org.apache.commons:commons-lang3 to v3.14.0 (solrbot)

* PR#2035: Update dependency com.google.errorprone:error_prone_annotations to v2.23.0 (solrbot)

* PR#2036: Update io.grpc:grpc-* to v1.59.0 (solrbot)

* PR#2037: Update org.apache.logging.log4j:* to v2.21.0 (solrbot)

* PR#2033: Update io.dropwizard.metrics:* to v4.2.21 (solrbot)

* PR#2032: Update dependency io.swagger.core.v3:swagger-annotations to v2.2.17 (solrbot)

* PR#2015: Update dependency org.codehaus.woodstox:stax2-api to v4.2.2 (solrbot)

* PR#2034: Update dependency com.github.spotbugs:spotbugs-annotations to v4.8.0 (solrbot)

* PR#2014: Update dependency com.google.guava:guava to v32.1.3-jre (solrbot)

* PR#2010: Update dependency org.immutables:value-annotations to v2.10.0 (solrbot)

* PR#2009: Update dependency io.opentelemetry:opentelemetry-bom to v1.31.0 (solrbot)

* PR#2008: Update dependency org.semver4j:semver4j to v5.2.2 (solrbot)

* PR#1989: Update org.apache.zookeeper:* to v3.9.1 (solrbot)

* PR#1745: Update dependency com.google.cloud:google-cloud-bom to v0.204.0 (solrbot)
